--- a/app/scss/components/atoms/_hamburger.scss
+++ b/app/scss/components/atoms/_hamburger.scss
@@ -1,6 +1,6 @@
 .a-hamburger {
-    width: 40px;
-    height: 30px;
+    width: 30px;
+    height: 15px;
     position: relative;
     margin-left: auto;
     padding: 0;
@@ -24,7 +24,7 @@
         right: 0;
         display: block;
         width: 100%;
-        height: 5px;
+        height: 3px;
         border-radius: 9px;
         opacity: 1;
         background: $color-primary;
@@ -36,10 +36,10 @@
         }
         &:nth-child(2) {
             width: 70%;
-            top: 10px;
+            top: 6px;
         }
         &:nth-child(3) {
-            top: 20px;
+            top: 12px;
         }
     }
 
